tests/rosetta/out/Java/csv-to-html-translation-2.error
javac: exit status 1
/tmp/CsvToHtmlTranslation2.java:9: error: cannot find symbol
        for (Object line : split(c, "\n")) {
                           ^
  symbol:   method split(String,String)
  location: class CsvToHtmlTranslation2
/tmp/CsvToHtmlTranslation2.java:10: error: cannot find symbol
            rows.add(split(line, ","));
                     ^
  symbol:   method split(Object,String)
  location: class CsvToHtmlTranslation2
/tmp/CsvToHtmlTranslation2.java:17: error: incompatible types: List<String> cannot be converted to List<List<String>>
                for (List<String> h : (List<List<String>>)rows.get(0)) {
                                                                  ^
/tmp/CsvToHtmlTranslation2.java:27: error: incompatible types: List<String> cannot be converted to List<List<String>>
                    for (List<String> cell : (List<List<String>>)rows.get(i)) {
                                                                         ^
4 errors
