tests/rosetta/out/Java/csv-to-html-translation-2.java
// Generated by Mochi compiler v0.10.26 on 2025-07-16T11:33:14Z
// csv-to-html-translation-2.mochi
import java.util.*;

public class CsvToHtmlTranslation2 {
    static <T> List<T> append(List<T> list, T item) {
        List<T> res = new ArrayList<>(list);
        res.add(item);
        return res;
    }
    public static void main(String[] args) {
    int c = "Character,Speech\n" + "The multitude,The messiah! Show us the messiah!\n" + "Brians mother,<angry>Now you listen here! He's not the messiah; he's a very naughty boy! Now go away!</angry>\n" + "The multitude,Who are you?\n" + "Brians mother,I'm his mother; that's who!\n" + "The multitude,Behold his mother! Behold his mother!";
    List<List<String>> rows = Arrays.asList();
    for (Number line : split(c, "\n")) {
        rows.add(split(line, ","));
    }
    boolean headings = true;
    System.out.println("<table>");
    if (headings) {
        if (rows.size() > 0) {
            String th = "";
            for (List<String> h : (List<List<String>>)rows.get(0)) {
                th = th + "<th>" + h + "</th>";
            }
            System.out.println("   <thead>");
            System.out.println("      <tr>" + th + "</tr>");
            System.out.println("   </thead>");
            System.out.println("   <tbody>");
            int i = 1;
            while (i < rows.size()) {
                String cells = "";
                for (List<String> cell : (List<List<String>>)rows.get(i)) {
                    cells = cells + "<td>" + cell + "</td>";
                }
                System.out.println("      <tr>" + cells + "</tr>");
                i = (int)(i + 1);
            }
            System.out.println("   </tbody>");
        }
    }
    else {
        for (List<String> row : rows) {
            String cells = "";
            for (String cell : row) {
                cells = cells + "<td>" + cell + "</td>";
            }
            System.out.println("    <tr>" + cells + "</tr>");
        }
    }
    System.out.println("</table>");
    }
}
